fix .room height on tablet

--- a/sass/room.scss
+++ b/sass/room.scss
@@ -169,6 +169,11 @@
 
 	animation: spin 0.8s ease infinite;
 }
+@media only screen and (max-width: 1025px) {
+	.room {
+		height: auto;
+	}
+}
 @media only screen and (max-width: 770px) and (orientation: portrait) {
 	.room {
 		top: 8vh;
@@ -176,7 +181,6 @@
 }
 @media only screen and (max-width: 770px) {
 	.room {
-		height: auto;
 		flex-wrap: wrap;
 		padding-bottom: 5%;
 	}
